# gen3-dataops-toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_pypi.yml
src/g3dt/: config.py  resolver.py
src/g3dt/cli/: __init__.py  config_cmds.py  delete_cmds.py  dict_cmds.py  ec2_cmds.py  indexd_cmds.py  jobs.py  k8s.py  main.py  metadata.py  pipeline_cmds.py  release_cmds.py  synth.py
src/g3dt/cli/_internal/: __init__.py  dispatch.py  registry.py  resolve.py  runner.py  safety.py
src/g3dt/indexd/: indexd_registrar.py
src/g3dt/ingest/: ingest.py
src/g3dt/services/delete/: delete_all_metadata_for_project.py  delete_metadata.sh  delete_metadata_by_guid.py
src/g3dt/services/dictionary/: deploy_dd.sh  pull_dict.sh  upload_dictionary.py
src/g3dt/services/indexd/: register_indexd.py
src/g3dt/services/k8s_ops/: argocd_restart_etl.sh  argocd_restart_ms.sh  argocd_restart_schema.sh  login_to_pod.sh  restart_etl_and_ms.sh
src/g3dt/services/synthetic_data/: delete_synth_metadata_sheepdog.py  full_deploy_dd_and_synth.sh  (+2 more)
src/g3dt/upload/: __init__.py  metadata_deleter.py  metadata_submitter.py
src/g3dt/utils/: athena_utils.py  release_writer.py
src/g3dt/validate/: validate.py
tests/: test_athena_utils.py  test_cli_commands.py  test_cli_config.py  test_cli_config_set.py  test_cli_dispatch.py  test_cli_safety.py  test_cli_synth.py  test_dbt_utils.py  test_indexd_registrar.py  test_ingest.py  test_metadata_deleter.py  test_metadata_submitter.py  test_no_project_identity.py  test_pipeline_cmds.py  test_release_cmds.py  test_release_writer.py  test_resolver.py  test_upload_synthdata_s3.py  test_validate.py
(+2 files in other folders)
