[tool.poetry]
name = "gen3-dataops-toolkit"
version = "2.1.1"
description = "Gen3 DataOps toolkit (g3dt): operate SSM-published Gen3 data pipeline environments"
authors = ["JoshuaHarris391 <harjo391@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/AustralianBioCommons/gen3-dataops-toolkit"
packages = [{ include = "g3dt", from = "src" }]
# Ship the services scripts (and any other non-.py assets) inside the wheel —
# the toolkit must work from a bare `pip install`, no repo checkout.
include = [{ path = "src/g3dt/services/**/*", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = ">=3.9.5,<4.0.0"
boto3 = "*"
python-dotenv = "*"
numpy = "<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
tzlocal = ">=5.3.1,<6.0.0"
gen3 = ">=4.27.4, <5.0.0"
gen3_validator = ">=2.0.0,<3.0.0"
pytz = ">=2025.2,<2026.0"
s3fs = "2025.10.0"
pyjwt = ">=2.10.1,<3.0.0"
tenacity = ">=8.2,<10.0"
awswrangler = ">=3.14.0,<4.0.0"
pyarrow = ">=14.0.0,<19.0.0"
gen3-metadata = ">=1.4.0,<2.0.0"
typer = ">=0.12"

[tool.poetry.scripts]
g3dt = "g3dt.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "*"
moto = ">=5.0"

# Optional: synthetic-data generator (LLM-realistic). Install with
# `poetry install --with synth` (or `g3dt synth install-simulator`). Kept out
# of the default install so core/EC2 environments stay lean.
[tool.poetry.group.synth]
optional = true

[tool.poetry.group.synth.dependencies]
gen3-metadata-simulator = "^0.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
